# backend/src/main/kotlin/com/ninjacontrol/knutpunkt/models/Settings.kt
@@ -1,0 +1,15 @@
+package com.ninjacontrol.knutpunkt.models
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class Setting(
+    val key: String,
+    val value: String,
+    val description: String? = null
+)
+
+@Serializable
+data class SettingsResponse(
+    val settings: List<Setting>
+)
